Update and rename Minecraft 1.8.8.html to WebCraft-1.12.2.html

--- a/WebCraft-1.12.2.html
+++ b/WebCraft-1.12.2.html
@@ -83,8 +83,7 @@
 -->
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
-<title>Minecraft 1.8.8</title>
-<!-- Google tag (gtag.js) -->
+<title>WebCraft - 1.12.2</title>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-64TQKQ7TWQ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -115,7 +114,7 @@ window.addEventListener("load", function() {
 		el.style.display = "block";
 		document.getElementById("eaglerWASMAvailableYes").addEventListener("click", function() {
 			handleDontShow();
-			document.location.href = "https://eaglercraft.com/mc/1.8.8-wasm/";
+			document.location.href = "https://eaglercraft.com/mc/1.12.2-wasm//";
 		});
 		document.getElementById("eaglerWASMAvailableNo").addEventListener("click", function() {
 			handleDontShow();
@@ -128,8 +127,8 @@ window.addEventListener("load", function() {
 window.disableUserscripts = true;
 window.__eaglercraftLoaderClient = {
 	container: "game_frame",
-	name: "EaglercraftX 1.8",
-	file: "net.lax1dude.eaglercraft.v1_8.client",
+	name: "EaglercraftX 1.12.2",
+	file: "net.lax1dude.eaglercraft.v1_12_2.client",
 	cid: "bafybeicvtan5bk6j2lnu6gopujqx36diqfhv6ipamc4hqbvx5mkpl6jmf4",
 	path: "",
 	dlSize: 13520353,
@@ -143,9 +142,7 @@ window.__eaglercraftLoaderClient = {
 <div id="eaglerWASMAvailable" style="display:none;position:absolute;left:0px;top:0px;right:0px;z-index:1000;">
 <div style="margin:auto;max-width:650px;">
 <div style="margin:20px;border:5px double black;padding:10px;background-color:white;text-align:center;font-family:sans-serif;font-size:1.2em;">
-<h3>EaglercraftX 1.8 WebAssembly GC is supported on your browser, would you like to try it?</h3>
-<p>The new version of EaglercraftX 1.8 gets almost <b>2x the FPS</b>, however it may crash if your device doesn't have a lot of memory</p>
-<p>Your existing singleplayer worlds will be available</p>
+<h3>WebCraft 1.12.2 WebAssembly GC is supported on your browser, would you like to try it?</h3>
 <h4><input type="checkbox" style="zoom:1.5;" id="eaglerWASMAvailableDontShow"> Do not show again</h4>
 <p><button id="eaglerWASMAvailableYes" style="zoom:1.5;">Switch to WebAssembly version</button></p>
 <p><button id="eaglerWASMAvailableNo" style="zoom:1.5;">Keep using JavaScript version</button></p>
