--- a/WebCraft-1.12.2.html
+++ b/WebCraft-1.12.2.html
@@ -83,7 +83,7 @@
 -->
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
-<title>WebCraft - 1.8</title>
+<title>WebCraft - 1.12.2</title>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-64TQKQ7TWQ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -114,7 +114,7 @@ window.addEventListener("load", function() {
 		el.style.display = "block";
 		document.getElementById("eaglerWASMAvailableYes").addEventListener("click", function() {
 			handleDontShow();
-			document.location.href = "https://eaglercraft.com/mc/1.8.8-wasm//";
+			document.location.href = "https://eaglercraft.com/mc/1.12.2-wasm//";
 		});
 		document.getElementById("eaglerWASMAvailableNo").addEventListener("click", function() {
 			handleDontShow();
@@ -127,8 +127,8 @@ window.addEventListener("load", function() {
 window.disableUserscripts = true;
 window.__eaglercraftLoaderClient = {
 	container: "game_frame",
-	name: "EaglercraftX 1.8.8",
-	file: "net.lax1dude.eaglercraft.v1_8.client",
+	name: "EaglercraftX 1.12.2",
+	file: "net.lax1dude.eaglercraft.v1_12_2.client",
 	cid: "bafybeicvtan5bk6j2lnu6gopujqx36diqfhv6ipamc4hqbvx5mkpl6jmf4",
 	path: "",
 	dlSize: 13520353,
